--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1,8 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
 
-
-%% Created for Jeremy Clark at 2018-11-19 13:57:46 -0500 
+%% Created for Jeremy Clark at 2019-09-11 09:37:22 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,6 +10,13 @@
 @comment{jabref-meta: databaseType:biblatex;}
 
 
+
+@techreport{RKYCC19,
+	Author = {S Ruoti and B Kaiser and A Yerukhimovich and J Clark and R Cunningham},
+	Date-Added = {2019-09-11 09:35:26 -0400},
+	Date-Modified = {2019-09-11 09:37:16 -0400},
+	Title = {SoK: Blockchain Technology and Its Potential Use Cases},
+	Year = {2019}}
 
 @article{Narayanan17,
 	Acmid = {3132259},
@@ -1153,9 +1159,8 @@
 	Year = {2012}}
 
 @inproceedings{ruoti2017weighing,
-	Title = {Blinded for Peer Review},
-	Author = {Blinded for Peer Review}
-}
+	Author = {Blinded for Peer Review},
+	Title = {Blinded for Peer Review}}
 
 @inproceedings{castro1999practical,
 	Author = {Castro, Miguel and Liskov, Barbara and others},
@@ -1209,62 +1214,55 @@
 	Organization = {Springer},
 	Pages = {399--414},
 	Title = {Bitter to better---how to make bitcoin a better currency},
-	Year = {2012}
-}
+	Year = {2012}}
 
 @article{DBLP:journals/corr/abs-1708-04748,
-	author    = {Steven Goldfeder and
-	Harry A. Kalodner and
-	Dillon Reisman and
-	Arvind Narayanan},
-	title     = {When the cookie meets the blockchain: Privacy risks of web payments
-	via cryptocurrencies},
-	journal   = {CoRR},
-	volume    = {abs/1708.04748},
-	year      = {2017},
-	url       = {http://arxiv.org/abs/1708.04748},
-	archivePrefix = {arXiv},
-	eprint    = {1708.04748},
-	timestamp = {Mon, 13 Aug 2018 16:48:40 +0200},
-	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1708-04748},
-	bibsource = {dblp computer science bibliography, https://dblp.org}
-}
+	Archiveprefix = {arXiv},
+	Author = {Steven Goldfeder and Harry A. Kalodner and Dillon Reisman and Arvind Narayanan},
+	Bibsource = {dblp computer science bibliography, https://dblp.org},
+	Biburl = {https://dblp.org/rec/bib/journals/corr/abs-1708-04748},
+	Eprint = {1708.04748},
+	Journal = {CoRR},
+	Timestamp = {Mon, 13 Aug 2018 16:48:40 +0200},
+	Title = {When the cookie meets the blockchain: Privacy risks of web payments via cryptocurrencies},
+	Url = {http://arxiv.org/abs/1708.04748},
+	Volume = {abs/1708.04748},
+	Year = {2017},
+	Bdsk-Url-1 = {http://arxiv.org/abs/1708.04748}}
 
 @incollection{koens2018blockchain,
-	title={What Blockchain Alternative Do You Need?},
-	author={Koens, Tommy and Poll, Erik},
-	booktitle={Data Privacy Management, Cryptocurrencies and Blockchain Technology},
-	pages={113--129},
-	year={2018},
-	publisher={Springer}
-}
-
-
+	Author = {Koens, Tommy and Poll, Erik},
+	Booktitle = {Data Privacy Management, Cryptocurrencies and Blockchain Technology},
+	Pages = {113--129},
+	Publisher = {Springer},
+	Title = {What Blockchain Alternative Do You Need?},
+	Year = {2018}}
 
 @misc{dao,
 	Author = {CoinDesk},
 	Lastchecked = {04/02/2018},
 	Title = {Understanding the DAO Hack},
-	Url = {https://www.coindesk.com/understanding-dao-hack-journalists/}
-}
+	Url = {https://www.coindesk.com/understanding-dao-hack-journalists/},
+	Bdsk-Url-1 = {https://www.coindesk.com/understanding-dao-hack-journalists/}}
 
 @article{ruoti2019usability,
-	author = {Ruoti, Scott and Andersen, Jeff and Dickinson, Luke and Heidbrink, Scott and Monson, Tyler and O'neill, Mark and Reese, Ken and Spendlove, Brad and Vaziripour, Elham and Wu, Justin and Zappala, Daniel and Seamons, Kent},
-	title = {A Usability Study of Four Secure Email Tools Using Paired Participants},
-	journal = {ACM Trans. Priv. Secur.},
-	issue_date = {April 2019},
-	volume = {22},
-	number = {2},
-	month = apr,
-	year = {2019},
-	issn = {2471-2566},
-	pages = {13:1--13:33},
-	articleno = {13},
-	numpages = {33},
-	url = {http://doi.acm.org/10.1145/3313761},
-	doi = {10.1145/3313761},
-	acmid = {3313761},
-	publisher = {ACM},
-	address = {New York, NY, USA},
-	keywords = {Grassroots adoption, PGP, paired participants, secure email},
-} 
+	Acmid = {3313761},
+	Address = {New York, NY, USA},
+	Articleno = {13},
+	Author = {Ruoti, Scott and Andersen, Jeff and Dickinson, Luke and Heidbrink, Scott and Monson, Tyler and O'neill, Mark and Reese, Ken and Spendlove, Brad and Vaziripour, Elham and Wu, Justin and Zappala, Daniel and Seamons, Kent},
+	Doi = {10.1145/3313761},
+	Issn = {2471-2566},
+	Issue_Date = {April 2019},
+	Journal = {ACM Trans. Priv. Secur.},
+	Keywords = {Grassroots adoption, PGP, paired participants, secure email},
+	Month = apr,
+	Number = {2},
+	Numpages = {33},
+	Pages = {13:1--13:33},
+	Publisher = {ACM},
+	Title = {A Usability Study of Four Secure Email Tools Using Paired Participants},
+	Url = {http://doi.acm.org/10.1145/3313761},
+	Volume = {22},
+	Year = {2019},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/3313761},
+	Bdsk-Url-2 = {https://doi.org/10.1145/3313761}}
