--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -1,12 +1,11 @@
 % !TEX root = ../main.tex
 
-\section{What is Blockchain Technology?}
+\section{Technical Properties}
 \label{sec:blockchain}
 
 \begin{figure}
 	\centering
 	\includegraphics[page=2,width=\columnwidth]{figures/grounded-theory-main}
-	
 	\caption{Technical Properties for Blockchain Technology}
 	\label{fig:technical-properties}
 \end{figure}
@@ -17,6 +16,7 @@ Our literature analysis finds three key groupings of technical properties relate
 \textit{resilience to data loss}.
 %By themselves, these property groups are nothing new, but used together they define \emph{Blockchain technology}, or \emph{Blockchain} for short.
 \snote{Add reference to technical report for full charts?}
+\jnote{A technical companion to this paper contains the complete mythological details: type of coding used at each stage and theory generation~\cite{RKYCC19}}
 %In Appendix~\ref{sec:distributed-comparison} we describe how other distributed technologies compare to Blockchain technology.
 
 \subsection{Shared Governance and Operation}
@@ -124,7 +124,7 @@ Still, sharding comes with the drawback that individual miners are no longer
 able to audit the system as a whole.
 Additionally, by reducing the number of miners responsible for any given transaction, sharding also reduces the number of miners an adversary would need to compromise to attack that transaction.
 
-\section{What are Blockchain Technology's Capabilities?}
+\section{Capabilities?}
 \label{sec:capabilities}
 
 \begin{figure}
