--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../main.tex
 
-\section{Blockchain Technology's Use Cases}
+\section{Use Cases}
 \label{sec:use-cases}
 
 Industry and government can apply Blockchain in a number of uses cases which 
