--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -62,7 +62,7 @@
 % Is this subset of challenges normative or positive?
 % Normative -- the set of challenges that ought to be studied
 % Positive -- the set of challenges that happened to be studied by others
-\section{Key Challenges for Blockchain Technology}
+\section{Challenges and Limitations}
 \label{sec:challenges}
 
 Our analysis of the literature revealed several challenges that need to be considered when developing systems using Blockchain technology.
